Initial system release patch 1.0.1 alpha build 32

--- a/src/main/java/Interface/Login.form
+++ b/src/main/java/Interface/Login.form
@@ -38,6 +38,10 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="a4" green="a4" red="ba" type="rgb"/>
         </Property>
+        <Property name="focusable" type="boolean" value="false"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="null"/>
+        </Property>
       </Properties>
 
       <Layout>
